more fixes for java 8 migration